# timelog

./: .test-record  .test-state  Cargo.toml  Makefile  PLUGINS.md  README.md  TESTING.md  TEST_SUMMARY.md  TODO.md  run_tests.sh
.github/workflows/: test.yml
.plugins/plugins/: README-ado.md  timelog-ado  timelog-ado.json  timelog-demo  timelog-jira  timelog-jira.json  timelog-webhook  timelog-webhook.json
src/: lib.rs  main.rs
tests/: cli_tests.rs  integration_tests.rs  plugin_tests.rs
tests/e2e/: run_all_tests.sh  test_basic_workflow.sh  test_period_reports.sh  test_plugin_system.sh  test_project_workflow.sh
