[package]
name = "timelog"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[dev-dependencies]
tempfile = "3.13.0"
assert_cmd = "2.0.17"
predicates = "3.1.2"
serial_test = "3.2.0"
